🔤 Fix Text Align For SmallFlashCard

--- a/src/components/SmallFlashCard.module.sass
+++ b/src/components/SmallFlashCard.module.sass
@@ -17,3 +17,4 @@
 
 	p
 		font-size: 1.5rem
+		text-align: center
